--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.header-container {
+header {
     width: 100%;
     height: 7em;
     display: flex;
@@ -6,7 +6,7 @@
     justify-content: center;
 }
 
-.header {
+.header__container {
     width: 80%;
     height: 4rem;
     background-color: var(--theme-secondary-black-translucent);
@@ -27,32 +27,26 @@
     transform: translateY(-400px);
 }
 
-/* @media (max-width: 480px) {
-    .header {
-        width: 80%;
-    }
-} */
-
-.header-left {
+.header__left {
     margin-left: 2rem;
     width: 10rem;
     height: 10rem;
 }
 
-.header-left img {
+.header__left img {
     width: 300%;
     height: 300%;
     margin: -15.5rem 0 0 -2.5rem;
 }
 
-.header-right {
+.header__right {
     margin-right: 1.2rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.header-right a {
+.header__right a {
     color: var(--theme-secondary-light-white);
     font-size: 1.2rem;
     font-family: Mark Pro Bold, sans-serif;
@@ -60,7 +54,7 @@
     margin-right: 1.2rem;
 }
 
-.header-right a:hover {
+.header__right a:hover {
     color: var(--theme-secondary-dark-white);
     
 }
@@ -103,11 +97,11 @@
     width: 50%;
     transform: translate(0%, 0%) rotate(-45deg);
 }
-.open .line-3 {
-    transform: translate(-100%, 0%) rotate(-45deg);
-}
 
 .open .line-2 {
     transform: translate(-50%, -50%) rotate(45deg);
 }
 
+.open .line-3 {
+    transform: translate(-100%, 0%) rotate(-45deg);
+}
