--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,93 +1,140 @@
+#about-me {
+  width: 80%;
+  height: auto;
+  margin: 8rem 0;
+  font-family: 'Mark Pro Bold', sans-serif;
+  font-size: 3rem;
+  color: var(--theme-secondary-light-white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+}
 
-/* About Me Section */
+.about-me h2 {
+  margin-bottom: 4rem;
+  font-size: 5.5rem;
+  line-height: 5.5rem;
+  letter-spacing: -0.2rem;
+  text-align: center;
+}
 
-.about-me {
-    font-family: Mark Pro Bold, sans-serif;
-    width: 80%;
+.about-me__desc {
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+.about-me__deadlines {
+  background: linear-gradient(-45deg,
+      var(--theme-dark-red),
+      var(--theme-dark-red),
+      var(--theme-dark-red),
+      var(--theme-secondary-dark-red),
+      var(--theme-light-red),
+      var(--theme-secondary-light-red),
+      var(--theme-light-red),
+      var(--theme-secondary-dark-red),
+      var(--theme-dark-red),
+      var(--theme-dark-red),
+      var(--theme-dark-red));
+  background-size: 2000%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 5s linear infinite;
+}
+
+.about-me__challenging {
+  background: linear-gradient(-45deg,
+      var(--theme-light-pink),
+      var(--theme-dark-pink),
+      var(--theme-light-purple),
+      var(--theme-secondary-light-purple),
+      var(--theme-dark-purple),
+      var(--theme-secondary-dark-purple),
+      var(--theme-dark-blue),
+      var(--theme-secondary-dark-blue),
+      var(--theme-light-blue),
+      var(--theme-secondary-light-blue),
+      var(--theme-light-blue),
+      var(--theme-secondary-dark-blue),
+      var(--theme-dark-blue),
+      var(--theme-secondary-dark-purple),
+      var(--theme-dark-purple),
+      var(--theme-secondary-light-purple),
+      var(--theme-light-purple),
+      var(--theme-dark-pink),
+      var(--theme-light-pink));
+  background-size: 2000%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 7s linear infinite;
+}
+
+
+.about-me__boxes {
+  width: 70rem;
+  height: 20rem;
+  margin-bottom: 4rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.about-me__box1,
+.about-me__box2,
+.about-me__box3 {
+  padding-bottom: 4rem;
+  border: 2px solid var(--theme-secondary-light-white);
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+  text-align: center;
+}
+
+
+.about-me__box1 h4,
+.about-me__box2 h4,
+.about-me__box3 h4 {
+  margin-top: 2rem;
+
+}
+
+.about-me__box1 h4 span:first-child {
+  background: linear-gradient(to top, rgb(223, 4, 141) 30%, transparent 30%);
+}
+
+.about-me__box2 h4 span:first-child {
+  background: linear-gradient(to top, rgb(45, 73, 216) 30%, transparent 30%);
+}
+
+.about-me__box3 h4 span:first-child {
+  background: linear-gradient(to top, rgb(255, 106, 43) 30%, transparent 30%);
+}
+
+.about-me__box1 p,
+.about-me__box2 p,
+.about-me__box3 p {
+  width: 16rem;
+  margin-top: 2rem;
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+@media (max-width: 1200px) {
+  .about-me__desc {
+    font-size: 0.7em;
+  }
+
+  .about-me__boxes {
+    width: 100vw;
     height: auto;
-    padding-top: 5rem;
-    margin-top: 8rem;
-    margin-bottom: 8rem;
-    font-size: 3rem;
-    color: var(--theme-secondary-light-white);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column;
+    grid-template-columns: 1fr;
   }
-  
+}
+
+@media (max-width: 600px) {
   .about-me h2 {
-    font-size: 5.5rem;
-    line-height: 5.5rem;
-    letter-spacing: -0.2rem;
-    margin-bottom: 4rem;
-    text-align: center;
+    margin-top: 2em;
+    font-size: 1em;
   }
-  
-  .about-me-desc {
-    text-align: center;
-    margin-bottom: 4rem;
-  }
-  
-  .about-me-boxes {
-    width: 70rem;
-    height: 20rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-bottom: 4rem;
-  }
-  
-  @media (max-width: 1200px) {
-    .about-me-desc {
-      font-size: 0.7em;
-    }
-    .about-me-boxes {
-      width: 100vw;
-      height: auto;
-      grid-template-columns: 1fr;
-    }
-  }
-  
-  @media (max-width: 600px) {
-    .about-me h2 {
-      font-size: 1em;
-      margin-top: 2em;
-    }
-  }
-  
-  .about-me-box1, .about-me-box2, .about-me-box3 {
-    border: 2px solid var(--theme-secondary-light-white);
-    display: flex;
-    text-align: center;
-    align-items: center;
-    flex-flow: column;
-    padding-bottom: 4rem;
-  }
-  
-  
-  .about-me-box1 h4, .about-me-box2 h4, .about-me-box3 h4 {
-    margin-top: 2rem;
-  
-  }
-  
-  .about-me-box1 h4 span:first-child {
-    background: linear-gradient(to top, rgb(223, 4, 141) 30%, transparent 30%);
-  }
-  
-  .about-me-box2 h4 span:first-child {
-    background: linear-gradient(to top, rgb(45, 73, 216) 30%, transparent 30%);
-  }
-  
-  .about-me-box3 h4 span:first-child {
-    background: linear-gradient(to top, rgb(255, 106, 43) 30%, transparent 30%);
-  }
-  
-  .about-me-box1 p, .about-me-box2 p, .about-me-box3 p {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.2rem;
-    font-weight: 400;
-    margin-top: 2rem;
-    width: 16rem;
-  }
-  
-  /* About Me Section */
+}
