--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 header {
     width: 100%;
     height: 7em;
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,7 +18,6 @@ header {
     align-items: center;
     justify-content: space-between;
     backdrop-filter: blur(1rem);
-    position: fixed;
     z-index: 5;
     transition-timing-function: ease-in;
     transition: 0.5s;
@@ -28,80 +28,51 @@ header {
 }
 
 .header__left {
-    margin-left: 2rem;
-    width: 10rem;
-    height: 10rem;
 }
 
 .header__left img {
-    width: 300%;
-    height: 300%;
-    margin: -15.5rem 0 0 -2.5rem;
+    width: 10rem;
 }
 
 .header__right {
-    margin-right: 1.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: none;
 }
 
-.header__right a {
-    color: var(--theme-secondary-light-white);
-    font-size: 1.2rem;
-    font-family: Mark Pro Bold, sans-serif;
-    text-decoration: none;
-    margin-right: 1.2rem;
-}
-
-.header__right a:hover {
-    color: var(--theme-secondary-dark-white);
+/* Tablet Portrait */
+@media only screen and (min-width: 768px) {
     
 }
 
-.header-menu {
-    width: 60px;
-    height: 60px;
-    position: relative;
-    cursor: pointer;
+
+/* Tablet Landscape */
+@media only screen and (min-width: 1024px) {
+    .header__right {
+        margin-right: 1.2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .header__right a {
+        margin-right: 1.2rem;
+        color: var(--theme-secondary-light-white);
+        font-family: 'Mark Pro Bold', sans-serif;
+        font-size: 1.2rem;
+        text-decoration: none;
+    }
+    
+    .header__right a:hover {
+        color: var(--theme-secondary-dark-white);
+    }
 }
 
-.header-menu span {
-    background: #fff;
-    width: 100%;
-    height: 1.5px;
-    border-radius: 1px;
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+
+/* Desktop */
+@media only screen and (min-width: 1440px) {
 
 }
 
-.header-menu .line-1 {
-    transform: translate(-50%, -10px);
-    transform-origin: 0 0;
-}
-
-.header-menu .line-3 {
-    width: 50%;
-    left: auto;
-    right: 0;
-    transform: translate(-100%, 9px);
-    transform-origin: 100% 0;
-}
-
-.open .line-1 {
-    width: 50%;
-    transform: translate(0%, 0%) rotate(-45deg);
-}
-
-.open .line-2 {
-    transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.open .line-3 {
-    transform: translate(-100%, 0%) rotate(-45deg);
+/* Max Desktop */
+@media only screen and (min-width: 1920px) {
+    
 }
