--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* CSS Reset */
 @font-face {
   font-family: 'Mark Pro Bold';
   src: url(../public/fonts/Mark-Pro-Bold/Mark-Pro-Bold.ttf);
@@ -16,6 +17,8 @@ h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p,
 figure,
 blockquote,
@@ -105,6 +108,8 @@ select {
   
 }
 
+/* CSS Reset End */
+
 html {
   background-color: var(--theme-black);
 }
@@ -113,11 +118,3 @@ h1, h2, h3, h4, h5, h6, p {
   color: var(--theme-secondary-light-white);
 }
 
-.main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column;
-}
-
-  
