--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,141 +1,50 @@
-
-/* Project Section */
-
 #projects {
-    width: 60%;
-  }
-  
-  .project__header h2 {
-    width: 100%;
-    font-size: 8rem;
-    line-height: 8rem;
-    letter-spacing: -0.2rem;
-    margin-bottom: 4rem;
-    text-align: center;
-  }
-  
-  .project__header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  
-  .project__header-right {
-    width: 50%;
-  }
-  
-  .project__portfolio {
-    display: grid;
-    grid-template-columns: 
-      repeat(auto-fit, minmax(1fr, 1fr));
-    row-gap: 1rem;
-    column-gap: 1rem;
-    margin-bottom: 8rem;
-  }
-  
-  .project__card {
-    aspect-ratio: 1 / 0.66;
-    border-radius: 0.5rem;
-    overflow: hidden;
-  }
-  
-  .project__card img {
-    width: 100%;
-    object-fit: cover;
-    border-radius: 0.5rem 0.5rem 0 0;
-    z-index: 0;
-  }
-  
-  .project__card img:hover {
-    transform: scale(1.1);
-    z-index: 0;
-    cursor: pointer;
-  }
-  
-  .stacked {
-    display: grid;
-  }
-  
-  .stacked > * {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
-  
-  .project__card-container {
-    height: auto;
-    background-color: var(--theme-secondary-black);
-    align-self: end;
-    padding: 1rem 1rem 1rem 1rem;
-    margin-top: -2rem;
-    border-radius: 0 0 0.5rem 0.5rem;
-    z-index: 2;
-  }
-  
-  .project__card-container p {
-    font-size: 1rem;
-    font-weight: 600;
-    color: var(--theme-secondary-dark-white);
-    margin-top: 0.5rem;
-  }
-  
-  .project__card-container a {
-    text-decoration: underline;
-    text-decoration-color: var(--theme-secondary-dark-white);
-  }
-  
-  .project__card-container img {
-    width: 6.5rem;
-    height: 1.5rem;
-    border-radius: 0;
-    margin-top: 1rem;
-  }
-  
-  .project__card-container img:hover {
-    transform: scale(1);
-    cursor: default;
-  }
-  
-  .project__card.featured {
-    grid-row: span 2;
-    grid-column: span 2;
-  }
-  
-  .project__card.featured img {
-    /* aspect-ratio: 1 / .5; */
-  }
-  
-  @media (max-width: 1200px) {
-    .project__card.featured {
-      grid-row: span 1;
-      grid-column: span 1;
-    }
-    .project__card {
-      width: 60vw;
-      aspect-ratio: 1 / 100%;
-      border-radius: 0.5rem;
-      height: 25rem;
-    }
-  }
-  
-  @media (max-width: 600px) {
-    .project__header {
-      display: flex;
-      flex-flow: column wrap; 
-      height: auto;
-      
-    }
-    .project__header h2 {
-      font-size: 4em;
-      margin: 0;
-      width: auto;
-    }
-    
-    
-    .project__portfolio {
-      row-gap: 2rem;
-    }
-  }
-  
-  
-  /* Project Section */
+  padding: 4rem 0;
+}
+
+.project__header {
+  margin-bottom: 4rem;
+}
+
+.project__header h2 {
+  font-size: 4rem;
+  line-height: 4rem;
+  text-align: center;
+}
+
+.project__portfolio {
+  display: flex;
+  flex-flow: column;
+}
+
+.project__card-container {
+  padding: 2rem;
+  background-color: var(--theme-secondary-black);
+}
+
+.project__card-content {
+  margin-bottom: 1rem;
+}
+
+.project__card-content h5 { 
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.project__card-content p {
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--theme-secondary-dark-white);
+}
+
+.project__card-content a {
+  color: var(--theme-dark-white);
+  text-decoration: underline;
+  text-decoration-color: var(--theme-secondary-dark-white);
+}
+
+.project__card-tech {
+  display: flex;
+  flex-wrap: wrap;
+}
