--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,7 @@ header {
     align-items: center;
     justify-content: space-between;
     backdrop-filter: blur(1rem);
-    z-index: 5;
+    z-index: 2147483638;
     transition-timing-function: ease-in;
     transition: 0.5s;
 }
