--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,3 @@
-/* Hero Section */
-
 #hero {
     width: 100vw;
     height: 100vh;
@@ -82,6 +80,11 @@
     bottom: 0;
 }
 
+.hero__banner .contact .show-email {
+    margin-top: 0.85rem;
+    margin-left: -6rem;
+}
+
 @keyframes slide {
     0% {
         margin-top: -37.5rem;
@@ -122,5 +125,48 @@
     }
 }
 
+/* Tablet Portrait */
+@media only screen and (min-width: 768px) {
+    .hero__title {
+        font-size: 3rem;
+        line-height: 4rem;
+        letter-spacing: 0rem;
+    }
 
-/* Hero Section */
+    .hero__slider div {
+        font-size: 2rem;
+    }
+}
+
+
+/* Tablet Landscape */
+@media only screen and (min-width: 1024px) {
+    .hero__title {
+        width: 38rem;
+    }
+    .hero__slider div {
+        font-size: 3rem;
+    }
+    .hero__banner {
+        bottom: 2rem;
+        display: flex;
+        justify-content: space-around;
+    }
+    .hero__cta {
+        text-wrap: nowrap;
+    }
+    .hero__banner .contact .show-email {
+        margin-top: 0;
+    }
+}
+
+
+/* Desktop */
+@media only screen and (min-width: 1440px) {
+
+}
+
+/* Max Desktop */
+@media only screen and (min-width: 1920px) {
+    
+}
